--- a/create2.html
+++ b/create2.html
@@ -13,13 +13,13 @@
     <div class="header-container">
         <div class="samping">
             <div class="logo">
-                <img src="/Asset/logo 1cak hitam.png" alt="">
+                <img src="Asset/logo 1cak hitam.png" alt="">
             </div>
     
             <div class="notif-profile">
-                <img class="notif" src="/Asset/homepage/notificationIcon.png" alt="">
+                <img class="notif" src="Asset/homepage/notificationIcon.png" alt="">
                 <a href="profile.html">
-                    <img class="profile" src="/Asset/homepage/profile.png" alt="">
+                    <img class="profile" src="Asset/homepage/profile.png" alt="">
                 </a>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     </form>
                 </div>
                 <div class="iconSearch">
-                    <img src="/Asset/homepage/searchIcon.png" alt="">
+                    <img src="Asset/homepage/searchIcon.png" alt="">
                 </div>
             </div>
         </div>
@@ -45,39 +45,39 @@
             <div class="navigation">
                 <a href="homepage.html">
                     <div class="cat">
-                        <img src="/Asset/homepage/homeIcon.png" alt="">
+                        <img src="Asset/homepage/homeIcon.png" alt="">
                         <p>Home</p>
                     </div>
                 </a>
 
                 <div class="cat">
-                    <img src="/Asset/homepage/topIcon.png" alt="">
+                    <img src="Asset/homepage/topIcon.png" alt="">
                     <p>Top</p>
                 </div>
 
                 <div class="cat">
-                    <img src="/Asset/homepage/trendingIcon.png" alt="">
+                    <img src="Asset/homepage/trendingIcon.png" alt="">
                     <p>Trending</p>
                 </div>
 
                 <div class="cat">
-                    <img src="/Asset/homepage/freshIcon.png" alt="">
+                    <img src="Asset/homepage/freshIcon.png" alt="">
                     <p>Fresh</p>
                 </div>
 
                 <div class="cat">
-                    <img src="/Asset/homepage/collectionIcon.png" alt="">
+                    <img src="Asset/homepage/collectionIcon.png" alt="">
                     <p>Collection</p>
                 </div>
 
                 <div class="cat">
-                    <img src="/Asset/homepage/friendIcon.png" alt="">
+                    <img src="Asset/homepage/friendIcon.png" alt="">
                     <p>Friends</p>
                 </div>
 
                 <a href="create.html">
                     <div class="cat">
-                        <img src="/Asset/homepage/createIcon.png" alt="">
+                        <img src="Asset/homepage/createIcon.png" alt="">
                         <p>Create</p>
                     </div>
                 </a>
